# constrained-optimization-tests

./: .gitignore  CMakeLists.txt  LICENSE  test_function.h
AugmentedLagrangian/: CMakeLists.txt  main.cpp
AugmentedLagrangianNlopt/: CMakeLists.txt  main.cpp
Penalty/: CMakeLists.txt  main.cpp
